# Http-Server

./: CMakeLists.txt  README.md  chromeRequestHeader.txt  client.c  httpResponseFormat.txt  index.html  makefile  server.c  server_poll.c  winSockHelper.c
src/: server.c  server.h  winSockHelper.h
